--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.94.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "fuse.js": "^7.1.0",
